tests/fail/invalid_char.stderr
error: Undefined Behavior: interpreting an invalid 32-bit value as a char: $HEX
  --> $DIR/invalid_char.rs:LL:CC
   |
LL |     let _x = c == 'x';
   |              ^^^^^^^^ interpreting an invalid 32-bit value as a char: $HEX
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: BACKTRACE:
   = note: inside `main` at $DIR/invalid_char.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

